jpostalライブラリをパッケージ管理

--- a/config/locales/models.yml
+++ b/config/locales/models.yml
@@ -13,8 +13,7 @@ ja:
         postal_code: '郵便番号'
         prefecture:  '都道府県'
         city:        '市区町村'
-        postal_code: '郵便番号'
-        address1:    '住所'
+        address1:    '番地'
         address2:    '建物名・号室'
       customer/gender:
         men: '男性'
@@ -25,7 +24,6 @@ ja:
     attributes:
       line_message:
         message: 'メッセージ'
-
 
   devise:
     sessions:
