最終来店日を顧客一覧に表示

--- a/config/locales/models.yml
+++ b/config/locales/models.yml
@@ -20,17 +20,18 @@ ja:
         line_channel_token: 'チャネルアクセストークン'
       customer:
         <<: *attr_common
-        name:        '名前'
-        name_kana:   '名前（カナ）'
-        gender:      '性別'
-        age:         '年齢'
-        tel_number:  '電話番号（携帯）'
-        birthday:    '生年月日'
-        postal_code: '郵便番号'
-        prefecture:  '都道府県'
-        city:        '市区町村'
-        address1:    '番地'
-        address2:    '建物名・号室'
+        name:           '名前'
+        name_kana:      '名前（カナ）'
+        gender:         '性別'
+        age:            '年齢'
+        tel_number:     '電話番号（携帯）'
+        birthday:       '生年月日'
+        postal_code:    '郵便番号'
+        prefecture:     '都道府県'
+        city:           '市区町村'
+        address1:       '番地'
+        address2:       '建物名・号室'
+        last_vist_date: '最終来店'
       customer/gender:
         men: '男性'
         women: '女性'
