--- a/config/locales/models.yml
+++ b/config/locales/models.yml
@@ -34,6 +34,8 @@ ja:
         address2:       '建物名・号室'
         line_receiving: 'LINE'
         last_vist_date: '最終来店'
+        introducer:     '紹介者'
+        invited_people: '招待した顧客達'
       customer/gender:
         men: '男性'
         women: '女性'
