ホーム画面locale化

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -135,3 +135,6 @@ ja:
   public:
     homes:
       to_login: To Login
+      index_for_system:
+        customer_count: 顧客数
+        line_notify: LINE通知
