--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -33,6 +33,7 @@ ja:
     max_num: 最大%{max_num}件表示
     info: 情報
     name: 名前
+    name_kana: 名前（カナ）
     introducer_changing: 紹介者変更
     nothing: なし
     history: 履歴
