顧客登録時の紹介者コードを追加

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -43,6 +43,8 @@ ja:
     failuere: 失敗
     see: 参照
     cancel: 取消
+    invite_code: 紹介コード
+    next: 次へ
   layouts: &layouts
     header:
       <<: *common
