--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -133,6 +133,9 @@ ja:
     form_tel_number:
       card_title: 電話番号を入力してください。
       annotation: ※ 紹介コードは必須ではありません。
+    new_with_line:
+      <<: *common
+      card_title: 登録情報を入力してください。
   customer:
     visited_logs:
       new:
