イベント削除処理

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -57,6 +57,7 @@ ja:
       holiday: 祭日
       event: イベント
     site_url: URL
+    destroied: 削除しました。
   layouts: &layouts
     header:
       <<: *common
