--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -51,6 +51,7 @@ ja:
     enabled: 有効
     disabled: 無効
     calendar: カレンダー
+    calendar_setting_link: カレンダー設定
     title: タイトル
     event_types:
       store_holiday: 店休日
