システム項目機能調整

--- a/config/locales/models.yml
+++ b/config/locales/models.yml
@@ -44,6 +44,7 @@ ja:
       item:
         <<: *attr_common
         code: 'コード'
+        sub_code : 'サブコード'
         name: '名称'
       visited_log:
         <<: *attr_common
