--- a/config/locales/models.yml
+++ b/config/locales/models.yml
@@ -55,7 +55,7 @@ ja:
         date_range: '期間指定エラー：'
       collection_item:
         <<: *attr_common
-        key: '項目キー'
+        key: '項目キー(表示名)'
         value: '項目値'
         sort_order: '並び順'
         enabled: '有効/無効'
