--- a/config/locales/tm.yml
+++ b/config/locales/tm.yml
@@ -69,6 +69,8 @@ tm:
     staffs: スタッフリスト
     staff_new: スタッフ登録
     staff_edit: スタッフ編集
+    agreement_link: 利用規約
+    agreement: 利用規約に同意する。
   layouts: &layouts
     header:
       <<: *common
