--- a/config/locales/tm.yml
+++ b/config/locales/tm.yml
@@ -263,6 +263,7 @@ tm:
       calendar:
         <<: *attr_common
         date_range: '期間指定エラー：'
+        is_entry: メンバー参加型
       collection_item:
         <<: *attr_common
         key: '項目キー(表示名)'
