--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -277,6 +277,10 @@ ja:
         enabled: '有効/無効'
       calendar_setting:
         is_open: 公開可否
+      user:
+        email: メール
+        line_display_name: LINEプロフィール名
+        image: LINEプロフィール画像
   activemodel:
     models:
       line_message: 'LINEメッセージ'
