--- a/config/locales/tm.yml
+++ b/config/locales/tm.yml
@@ -28,7 +28,8 @@ tm:
     edit: 編集
     edit_link: '　編集　'
     return_link: '　戻る　'
-    searting: '検索中...'
+    search: 検索
+    in_search: '検索中...'
     clear: クリア
     line_notify: LINE通知
     honorifics: 様
