--- a/config/locales/tm.yml
+++ b/config/locales/tm.yml
@@ -28,7 +28,7 @@ tm:
     edit: 編集
     edit_link: '　編集　'
     return_link: '　戻る　'
-    search: 検索
+    search: '検　索'
     in_search: '検索中...'
     clear: クリア
     line_notify: LINE通知
