--- a/config/locales/tm.yml
+++ b/config/locales/tm.yml
@@ -84,6 +84,9 @@ tm:
     join: 参加
     unjoin: 不参加
     applied: （適用済）
+    confirm_append_set_for_introducer: 'さんに紹介者を変更してよろしいですか？'
+    prompt_logo_file: ロゴファイルを選択(ここにドロップすることもできます)
+    prompt_qrcode_file: LINE QRコードファイルを選択(ここにドロップすることもできます)
   layouts: &layouts
     header:
       <<: *common
