--- a/config/locales/tm.yml
+++ b/config/locales/tm.yml
@@ -90,6 +90,9 @@ tm:
     update_line_info_button: LINE情報更新
     update_complete_message: 更新しました。
     non_change_message: 変更はありませんでした。
+    message_content: メッセージ
+    max_60_annotation: ※ 最大60文字まで。
+    target_customers: 送信対象メンバー
   layouts: &layouts
     header:
       <<: *common
@@ -104,9 +107,7 @@ tm:
     bulk_line_messages:
       index: &bulk_line_messages_index
         <<: *common
-        message_content: メッセージ
         annotation: ※ メンバー毎のLINEメッセージには履歴されません。
-        target_customers: 送信対象メンバー
         disabled_customers: 送信無効メンバー
         send_date: 日付
         send_status: ステータス
